@@ -1,6 +1,7 @@
 Version Next
 
     - SpringContextApplication: add "vaadinContextConfigLocation" init param
+    - Fix NotSerializableException in ContextApplication (issue #9)
 
 Version 1.0.420 Released June 9, 2012
 
